rule4be/k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule4-prod
  namespace: production
  labels:
    app: rule4
    env: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rule4
      env: production
  template:
    metadata:
      labels:
        app: rule4
        env: production
    spec:
      containers:
      - name: rule4-prod
        image: __IMAGE_NAME_WITH_TAG__
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "62.5m" # 0.0625 CPU core
          limits:
            memory: "512Mi"
            cpu: "125m" # 0.125 CPU core
