rule4be/k8s/production/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "rule4-prod-service"
  namespace: "production"
  labels:
    app: "rule4"
    env: "production"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8000
  selector:
    app: "rule4"
    env: "production"
  type: "LoadBalancer"
  loadBalancerIP: ""
